# VisaAtGlance

./: .gitignore  Makefile  README.md
.github/workflows/: backend-qa.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dashboard.py  health.py
backend/app/domain/: cohorts.py  dashboard.py  models.py  privacy.py
backend/app/ingestion/: i485tracker.py  quality.py
backend/app/ingestion/mock_data/: i485tracker_cases.sample.json
backend/scripts/: fetch_i485tracker_full.py
backend/tests/: test_domain_models.py  test_health.py  test_i485tracker_ingestion.py  test_privacy_and_cohorts.py  test_public_dashboard_api.py  test_public_dashboard_summary.py  test_timeline_quality.py
docs/: README.md  data-model.md  developer-notes.md  git-workflow.md  product-spec-v0.1.md  refactoring-notes.md  roadmap.md
frontend/: AGENTS.md  README.md  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/dashboard/: ProcessingPreviewChart.tsx  ProcessingPreviewChartInner.tsx
